gridsuite-dependencies 38 (#115)
Signed-off-by: BOUHOURS Antoine <antoine.bouhours@rte-france.com>
Co-authored-by: Slimane AMAR <amarsli@gm0winl104.bureau.si.interne>
Co-authored-by: Thang PHAM <phamthang37@gmail.com>